<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HelloWorld</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_other">Other Activity</string>
    <string name="menu_exit">Exit</string>
    <string name="intent_title">Intent</string>
    <string name="activity_title">Another Activity</string>
    <string name="phone_call_title">Phone Dialer</string>
    <string name="map_title">Map</string>
    <string name="open_activity_title">Open Activity</string>
    <string name="other_activity_title">Pass Data To Activity</string>
    <string name="name_title">Your Name</string>
    <string name="address_title">Your Address</string>
    <string name="save_title">Save</string>
    <string name="title_activity_life_cycle">LifeCycleActivity</string>
    <string name="title_activity_detail">Detail Activity</string>

</resources>