<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
     
   <TextView
      android:layout_width="fill_parent"
      android:layout_height="30dp"
      android:background="@drawable/header_bg_royal"
      android:paddingLeft="8dp"
      android:paddingTop="6dp"
      android:text="@string/activity_title"
      android:textColor="@color/white_color"
      android:textStyle="bold" />

  <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">
    
    <Button
        android:id="@+id/btn_open_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_activity_title" />
    
  </LinearLayout>
 
  <TextView
      android:layout_width="fill_parent"
      android:layout_height="30dp"
      android:background="@drawable/header_bg_royal"
      android:paddingLeft="8dp"
      android:paddingTop="6dp"
      android:text="@string/intent_title"
      android:textColor="@color/white_color"
      android:textStyle="bold" />

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp">
    
    <Button
        android:id="@+id/btn_phone_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_call_title" />

    <Button
        android:id="@+id/btn_map_application"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/map_title" />

  </LinearLayout>

  <TextView
      android:layout_width="fill_parent"
      android:layout_height="30dp"
      android:background="@drawable/header_bg_royal"
      android:paddingLeft="8dp"
      android:paddingTop="6dp"
      android:textColor="@color/white_color"
      android:textStyle="bold"
      android:text="@string/other_activity_title"/>

  <LinearLayout
    	android:layout_width="match_parent"
  		android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:layout_marginBottom="10dp"
  		android:orientation="vertical">

    <LinearLayout
  		android:layout_width="match_parent"
		  android:layout_height="wrap_content">

      <TextView
          android:layout_width="100dp"
          android:layout_height="wrap_content"
          android:text="@string/name_title" />

      <EditText
          android:id="@+id/txt_name"
          android:layout_width="0dp"
          android:layout_height="35dp"
          android:layout_weight="1"
          android:ems="10"
          android:inputType="text" >
      </EditText>

    </LinearLayout>

    <LinearLayout
      		android:layout_width="match_parent"
    		  android:layout_height="wrap_content">

      <TextView
          android:layout_width="100dp"
          android:layout_height="wrap_content"
          android:text="@string/address_title" />

      <EditText
          android:id="@+id/txt_address"
          android:layout_width="0dp"
          android:layout_height="35dp"
          android:layout_weight="1"
          android:ems="10"
          android:inputType="text"  >
      </EditText>

    </LinearLayout>

  </LinearLayout>

  <Button
      android:id="@+id/btn_save"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:background="@drawable/btn_bg"
      android:text="@string/save_title" />

</LinearLayout>
