<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/title_activity_detail"
        android:textColor="@color/black_color"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="20dp"
        android:layout_toLeftOf="@+id/textView2"
        android:text="@string/name_title" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="80dp"
        android:text="@string/address_title" />

    <TextView
        android:id="@+id/txtYourName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="33dp"
        android:layout_toRightOf="@+id/textView1"
        android:text="Your Name"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtYourAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtYourName"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="34dp"
        android:text="Your Address"
        android:textSize="18sp" />

</RelativeLayout>